// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback should fail validation when missing fields are provided 1`] = `
Object {
  "cohortMembership": [ValidatorError: Path \`cohortMembership\` is required.],
  "cohortProject": [ValidatorError: Path \`cohortProject\` is required.],
  "createdBy": [ValidatorError: Path \`createdBy\` is required.],
  "reviewerSurvey": [ValidatorError: Path \`reviewerSurvey\` is required.],
}
`;

exports[`Feedback should fail when cohortProject, cohortMembership, createdBy or reviewAnswer not ObjecId 1`] = `
Object {
  "cohortMembership": [CastError: Cast to ObjectID failed for value "cohortMembership._id" at path "cohortMembership"],
  "cohortProject": [CastError: Cast to ObjectID failed for value "cohortProject._id" at path "cohortProject"],
  "createdBy": [CastError: Cast to ObjectID failed for value "createdBy._id" at path "createdBy"],
  "reviewerSurveyResults": [CastError: Cast to Array failed for value "[ 'reviewAnswer._id' ]" at path "reviewerSurveyResults"],
}
`;

exports[`Feedback should fail when reviewAnswer does not exist 1`] = `
Object {
  "cohortMembership": [ValidatorError: Path \`cohortMembership\` is required.],
}
`;

exports[`Feedback should pass with reviewerSurveyResults 1`] = `
Object {
  "cohortMembership": [ValidatorError: Path \`cohortMembership\` is required.],
}
`;
